# hl7_validator

./: pyproject.toml
models/: patient_example.py
parsers/: hl7_to_dict.py
tests/: test_hl7_to_dict.py
